# energy-intel

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: daily-brief.yml  pages.yml  peer-report.yml
briefs/: 2026-04-23.md  2026-04-24.md  2026-04-27.md  2026-04-28.md  2026-04-29.md  2026-04-30.md  2026-05-01.md  2026-05-04.md  2026-05-05.md  2026-05-06.md  peer_comp.md
config/: peer_ciks.yml  positions.example.yml  watchlist.yml
data/: peer_history.parquet
src/: main.py  peer_report.py
src/analysis/: headlines.py  peer_comp.py  position.py  signals.py  unit_economics.py
src/brief/: generate.py  peer_comp.py  templates.py
src/delivery/: email.py
src/site/: build.py  history.py  redact.py  render.py
src/site/assets/: style.css
src/site/templates/: archive.html  base.html  brief.html  macro.html  peers.html
src/sources/: baker_hughes.py  eia.py  equities.py  headlines.py  macro.py  sec.py
tests/: test_baker_hughes.py  test_brief.py  test_eia.py  test_email.py  test_equities.py  test_headline_analysis.py  test_headlines.py  test_macro.py  test_peer_comp.py  test_position.py  test_redact.py  test_sec.py  test_signals.py  test_site_build.py  test_unit_economics.py
tests/fixtures/: baker_hughes_landing.html  eia_crude_stocks.json  eia_spr.json  headlines_sample.xml  sec_company_facts.json
